@@ -1,3 +1,8 @@
+For 1.19.6:
+	- MidiControl - work on event routing of values (Strings changed, etc).
+
+
+
 For 1.19.5:
 	- more plugin work on Linux and OS X.
 
